; ModuleID = '/home/carl/AnghaBench/lede/target/linux/adm5120/files-3.18/drivers/usb/host/extr_adm5120-mem.c_ed_free.c'
source_filename = "/home/carl/AnghaBench/lede/target/linux/adm5120/files-3.18/drivers/usb/host/extr_adm5120-mem.c_ed_free.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.admhcd = type { i32 }
%struct.ed = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.admhcd*, %struct.ed*)* @ed_free to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @ed_free(%struct.admhcd* %0, %struct.ed* %1) #0 {
  %3 = alloca %struct.admhcd*, align 8
  %4 = alloca %struct.ed*, align 8
  store %struct.admhcd* %0, %struct.admhcd** %3, align 8
  store %struct.ed* %1, %struct.ed** %4, align 8
  %5 = load %struct.admhcd*, %struct.admhcd** %3, align 8
  %6 = getelementptr inbounds %struct.admhcd, %struct.admhcd* %5, i32 0, i32 0
  %7 = load i32, i32* %6, align 4
  %8 = load %struct.ed*, %struct.ed** %4, align 8
  %9 = load %struct.ed*, %struct.ed** %4, align 8
  %10 = getelementptr inbounds %struct.ed, %struct.ed* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call i32 @dma_pool_free(i32 %7, %struct.ed* %8, i32 %11)
  ret void
}

declare dso_local i32 @dma_pool_free(i32, %struct.ed*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
